--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,36 @@
-<h1>
-  {{title}}
-</h1>
+<dx-validation-group>
+<dx-text-box [(value)]="name" width="300">
+    <dx-validator 
+      [validationRules]="[{
+          type: 'required',
+          message: 'Name is required' }]">
+  </dx-validator>
+</dx-text-box>
+<dx-button text="DevExtreme Button in Angular!" (onClick)="sayHello($event)" [useSubmitBehavior]="true"></dx-button>
+<dx-validation-summary></dx-validation-summary>
+<dx-validation-group>
+
+<br /><br />
+
+<dx-data-grid [dataSource]="dataSource" [rowAlternationEnabled]="true">
+    <dxo-paging [pageSize]="10"></dxo-paging>
+    <dxo-pager 
+        [showPageSizeSelector]="true"
+        [allowedPageSizes]="[5, 10, 20]"
+        [showInfo]="true">
+    </dxo-pager>
+
+    <dxo-search-panel 
+        [visible]="true" 
+        [width]="240" 
+        placeholder="Search..."></dxo-search-panel>
+    <dxo-filter-row [visible]="true"></dxo-filter-row>
+
+    <dxo-export [enabled]="true"></dxo-export>
+
+    <dxi-column dataField="CompanyName"></dxi-column>
+    <dxi-column dataField="City"></dxi-column>
+    <dxi-column dataField="State"></dxi-column>
+    <dxi-column dataField="Phone"></dxi-column>
+    <dxi-column dataField="Fax"></dxi-column>
+</dx-data-grid>
