--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,22 @@
 <dx-validation-group>
-<dx-text-box [(value)]="name" width="300">
-    <dx-validator 
-      [validationRules]="[{
+    <dx-text-box [(value)]="name" width="300">
+        <dx-validator [validationRules]="[{
           type: 'required',
           message: 'Name is required' }]">
-  </dx-validator>
-</dx-text-box>
-<dx-button text="DevExtreme Button in Angular!" (onClick)="sayHello($event)" [useSubmitBehavior]="true"></dx-button>
-<dx-validation-summary></dx-validation-summary>
+            </dx-validator>
+    </dx-text-box>
+    <dx-button text="DevExtreme Button in Angular!" (onClick)="sayHello($event)" [useSubmitBehavior]="true"></dx-button>
+    <dx-validation-summary></dx-validation-summary>
 <dx-validation-group>
 
 <br /><br />
 
 <dx-data-grid [dataSource]="dataSource" [rowAlternationEnabled]="true">
     <dxo-paging [pageSize]="10"></dxo-paging>
-    <dxo-pager 
-        [showPageSizeSelector]="true"
-        [allowedPageSizes]="[5, 10, 20]"
-        [showInfo]="true">
+    <dxo-pager [showPageSizeSelector]="true" [allowedPageSizes]="[5, 10, 20]" [showInfo]="true">
     </dxo-pager>
 
-    <dxo-search-panel 
-        [visible]="true" 
-        [width]="240" 
-        placeholder="Search..."></dxo-search-panel>
+    <dxo-search-panel [visible]="true" [width]="240" placeholder="Search..."></dxo-search-panel>
     <dxo-filter-row [visible]="true"></dxo-filter-row>
 
     <dxo-export [enabled]="true"></dxo-export>
